--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -432,47 +432,508 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "24a59aa4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>time_in_hospital</th>\n",
+       "      <th>n_lab_procedures</th>\n",
+       "      <th>n_procedures</th>\n",
+       "      <th>n_medications</th>\n",
+       "      <th>n_outpatient</th>\n",
+       "      <th>n_inpatient</th>\n",
+       "      <th>n_emergency</th>\n",
+       "      <th>medical_specialty</th>\n",
+       "      <th>diag_1</th>\n",
+       "      <th>diag_2</th>\n",
+       "      <th>diag_3</th>\n",
+       "      <th>glucose_test</th>\n",
+       "      <th>A1Ctest</th>\n",
+       "      <th>change</th>\n",
+       "      <th>diabetes_med</th>\n",
+       "      <th>readmitted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[70-80)</td>\n",
+       "      <td>8</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>Respiratory</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[70-80)</td>\n",
+       "      <td>3</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[50-60)</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[70-80)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[60-70)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>InternalMedicine</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>Respiratory</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24995</th>\n",
+       "      <td>[80-90)</td>\n",
+       "      <td>14</td>\n",
+       "      <td>77</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>no</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24996</th>\n",
+       "      <td>[80-90)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Digestive</td>\n",
+       "      <td>Injury</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>no</td>\n",
+       "      <td>high</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24997</th>\n",
+       "      <td>[70-80)</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24998</th>\n",
+       "      <td>[70-80)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>61</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Family/GeneralPractice</td>\n",
+       "      <td>Respiratory</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999</th>\n",
+       "      <td>[50-60)</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>Circulatory</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25000 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           age  time_in_hospital  n_lab_procedures  n_procedures  \\\n",
+       "0      [70-80)                 8                72             1   \n",
+       "1      [70-80)                 3                34             2   \n",
+       "2      [50-60)                 5                45             0   \n",
+       "3      [70-80)                 2                36             0   \n",
+       "4      [60-70)                 1                42             0   \n",
+       "...        ...               ...               ...           ...   \n",
+       "24995  [80-90)                14                77             1   \n",
+       "24996  [80-90)                 2                66             0   \n",
+       "24997  [70-80)                 5                12             0   \n",
+       "24998  [70-80)                 2                61             3   \n",
+       "24999  [50-60)                10                37             1   \n",
+       "\n",
+       "       n_medications  n_outpatient  n_inpatient  n_emergency  \\\n",
+       "0                 18             2            0            0   \n",
+       "1                 13             0            0            0   \n",
+       "2                 18             0            0            0   \n",
+       "3                 12             1            0            0   \n",
+       "4                  7             0            0            0   \n",
+       "...              ...           ...          ...          ...   \n",
+       "24995             30             0            0            0   \n",
+       "24996             24             0            0            0   \n",
+       "24997              6             0            1            0   \n",
+       "24998             15             0            0            0   \n",
+       "24999             24             0            0            0   \n",
+       "\n",
+       "            medical_specialty       diag_1       diag_2       diag_3  \\\n",
+       "0                     Missing  Circulatory  Respiratory        Other   \n",
+       "1                       Other        Other        Other        Other   \n",
+       "2                     Missing  Circulatory  Circulatory  Circulatory   \n",
+       "3                     Missing  Circulatory        Other     Diabetes   \n",
+       "4            InternalMedicine        Other  Circulatory  Respiratory   \n",
+       "...                       ...          ...          ...          ...   \n",
+       "24995                 Missing  Circulatory        Other  Circulatory   \n",
+       "24996                 Missing    Digestive       Injury        Other   \n",
+       "24997                 Missing        Other        Other        Other   \n",
+       "24998  Family/GeneralPractice  Respiratory     Diabetes        Other   \n",
+       "24999                 Missing        Other     Diabetes  Circulatory   \n",
+       "\n",
+       "      glucose_test A1Ctest change diabetes_med readmitted  \n",
+       "0               no      no     no          yes         no  \n",
+       "1               no      no     no          yes         no  \n",
+       "2               no      no    yes          yes        yes  \n",
+       "3               no      no    yes          yes        yes  \n",
+       "4               no      no     no          yes         no  \n",
+       "...            ...     ...    ...          ...        ...  \n",
+       "24995           no  normal     no           no        yes  \n",
+       "24996           no    high    yes          yes        yes  \n",
+       "24997       normal      no     no           no        yes  \n",
+       "24998           no      no    yes          yes         no  \n",
+       "24999           no      no     no           no        yes  \n",
+       "\n",
+       "[25000 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "3fa6624f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Correlation heatmap for numeric features\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m numeric_df \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mselect_dtypes(include\u001b[38;5;241m=\u001b[39m[np\u001b[38;5;241m.\u001b[39mnumber])\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m numeric_df\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo numeric columns available for correlation heatmap.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(25000, 17)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Correlation heatmap for numeric features\n",
-    "numeric_df = df.select_dtypes(include=[np.number])\n",
-    "if numeric_df.shape[1] == 0:\n",
-    "    print(\"No numeric columns available for correlation heatmap.\")\n",
-    "else:\n",
-    "    corr = numeric_df.corr()\n",
-    "    # Generate a mask for the upper triangle\n",
-    "    mask = np.triu(np.ones_like(corr, dtype=bool))\n",
-    "    plt.figure(figsize=(12,10))\n",
-    "    sns.heatmap(corr, mask=mask, annot=True, fmt='.2f', cmap='coolwarm',\n",
-    "                linewidths=0.5, cbar_kws={'shrink':0.75})\n",
-    "    plt.title('Correlation heatmap (numeric features)')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
+    "df_dup=df.drop_duplicates()\n",
+    "df_dup.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "003b2b84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "n_inpatient\n",
+       "0     16537\n",
+       "1      4926\n",
+       "2      1909\n",
+       "3       833\n",
+       "4       358\n",
+       "5       211\n",
+       "6       104\n",
+       "7        47\n",
+       "8        26\n",
+       "9        20\n",
+       "10       12\n",
+       "11        8\n",
+       "12        3\n",
+       "14        2\n",
+       "15        2\n",
+       "13        2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dup['n_inpatient'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1d0c77d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "n_outpatient\n",
+       "0     20859\n",
+       "1      2076\n",
+       "2       913\n",
+       "3       537\n",
+       "4       269\n",
+       "5       136\n",
+       "6        74\n",
+       "7        39\n",
+       "8        18\n",
+       "11       16\n",
+       "9        13\n",
+       "10       12\n",
+       "13        7\n",
+       "14        7\n",
+       "12        6\n",
+       "15        5\n",
+       "21        3\n",
+       "27        2\n",
+       "16        2\n",
+       "20        2\n",
+       "18        2\n",
+       "33        1\n",
+       "23        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dup['n_outpatient'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b4b7907d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "medical_specialty\n",
+       "Missing                   12382\n",
+       "InternalMedicine           3565\n",
+       "Other                      2664\n",
+       "Emergency/Trauma           1885\n",
+       "Family/GeneralPractice     1882\n",
+       "Cardiology                 1409\n",
+       "Surgery                    1213\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"medical_specialty\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e8fba4cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        0\n",
+       "2        1\n",
+       "3        1\n",
+       "4        0\n",
+       "        ..\n",
+       "24995    1\n",
+       "24996    1\n",
+       "24997    1\n",
+       "24998    0\n",
+       "24999    1\n",
+       "Name: readmitted, Length: 25000, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le=LabelEncoder()\n",
+    "df_dup['readmitted']=le.fit_transform(df_dup['readmitted'])\n",
+    "df_dup['readmitted']"
    ]
   }
  ],
